kubernetes-debug/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
  #labels: - не дало возможности запустить strace
  #  pod-security.kubernetes.io/enforce: privileged
    #pod-security.kubernetes.io/enforce-version: v1.31 - не использую
  #  pod-security.kubernetes.io/audit: privileged
    #pod-security.kubernetes.io/audit-version: v1.31 - не использую
  #  pod-security.kubernetes.io/warn: privileged #restricted #baseline
    #pod-security.kubernetes.io/warn-version: v1.31 - не использую
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: homework
  labels:
    app: web
spec:
  #securityContext: - не дало возможности запустить strace
  #  runAsUser: 0
  #  runAsGroup: 0
  #  fsGroup: 101
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      shareProcessNamespace: true
      containers:
      - name: nginx
        image: kyos0109/nginx-distroless
        #securityContext: - не дало возможности запустить strace
        #  privileged: true
        #  capabilities:
        #    add: ["SYS_PTRACE", "SYS_ADMIN"]
        #  allowPrivilegeEscalation: true
        #  seccompProfile:
        #    type: Unconfined
        ports:
        - containerPort: 80
        volumeMounts:
        - name: empty-volume
          mountPath: /usr/share/nginx/html
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 80
      volumes:
      - name: empty-volume
        emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: homework
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: web
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: sd-k8s4-debug.patio-minsk.by
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: web
              port:
                number: 80
